# ingest_pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  pyproject.toml  pytest.ini
data/: sample_data.json  schema.json  small_sample_data.json
infrastructure/local/: stack.yml
main/: event_specification.py  event_tools.py  file_processor.py  ingest_data.py  postgres_loader.py  source_processor.py
main/configs/: config_local.ini
main/model/: event.py
main/models/: event.py
main/models/templates/: .sqlfluff  event_staging_table.sql
main/schema/: schema.json
src/main/: file_processor.py  ingest_data.py  ingester.py
tests/: invalid_records.json  test_file_processing.py  test_postgres_loader.py  test_validation.py
tests/test_data/: invalid_records.json  mixed_data.json
