[tool.poetry]
name = "ingest_pipeline"
version = "1.0.0"
description = ""
authors = ["Paweł Wiszniewski <pawel.wiszniewski@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
psycopg2 = "2.9.1"
Jinja2 = "3.0.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
pytest-mock="3.6.1"
black = "21.6b0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
